<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">house_analysis</string>

    <string name="WelcomeTo">Добро пожаловать в</string>
    <string name="nameCompany">Электрон</string>
    <string name="companyDescription">Приложение для [описание на две-три строки]</string>

    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="account_login">Вход в личный кабинет</string>
    <string name="account_sign_up">Регистрация</string>
    <string name="sign_up_to">Зарегистрируйтесь, чтобы рабочий процесс стал комфортным</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="birthdate">Дата рождения</string>

    <string name="gender">Пол</string>
    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string name="text_phone">Телефон</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Пароль</string>
    <string name="confirm_password">Еще раз пароль</string>
    <string name="i_have_18">Мне есть 18 лет</string>
    <string name="do_not_have_account">У вас нет профиля?</string>
    <string name="do_you_have_account">У вас уже есть профиль?</string>
    <string name="forgot_password">Забыли пароль?</string>

    <string name="phone_hint">Номер с кодом города, например +7 999 432 32 32</string>
    <string name="confirm_your_account">На почту придет ссылка для подтверждения аккаунта</string>
    <string name="error_occurred">от 8 символов, только латинские буквы и цифры</string>
    <string name="accept_policy">Я согласен с <font color='#15499F'>условиями обработки персональных данных</font></string>
    <string name="enter_your_email">Введите e-mail, указанный при регистрации. На почту придет код для восстановления пароля</string>
    <string name="restore_password">Восстановление пароля</string>
    <string name="enter_code">Введите код, отправленный на e-mail</string>
    <string name="text_code">Код</string>
    <string name="text_ready">Готово</string>
    <string name="new_password">Новый пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="password_validation">от 8 символов, только латинские буквы и цифры</string>
    <string name="change_password">Изменить пароль</string>
    <string name="is_remember_password">Запомнить пароль?</string>

    <string name="app_version">Версия 1.1.1</string>
    <string name="text_feedback">Обратная связь</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Условия использования</string>
    <string name="rate_app">Оценить приложение</string>

    <string name="text_language">Язык</string>
    <string name="text_russian">Русский</string>
    <string name="text_english">English</string>
    <string name="text_belarusian">Belarusian</string>
    <string name="text_french">French</string>
    <string name="text_german">German</string>
    <string name="text_italian">Italian</string>

    <string name="text_geolocation">Геолокация</string>
    <string name="text_about_app">О приложении</string>
    <string name="text_sign_out">Выйти</string>
    <string name="text_main">Главная</string>
    <string name="text_search">Поиск</string>
    <string name="text_add">Добавить</string>
    <string name="text_highlight">Выделить</string>

    <string name="text_insert">Вставить</string>
    <string name="text_copy">Копировать</string>
    <string name="text_edit">Редактировать</string>
    <string name="text_configure">Настроить</string>
    <string name="text_cancel">Отмена</string>
    <string name="task_list">Список задач</string>

    <string name="all_worked_out">Все получилось!</string>
    <string name="activate_account">Осталось активировать аккаунт \nпо ссылке на почте, чтобы появился \nдоступ к профилю!</string>
    <string name="text_get_it">Понятно</string>
    <string name="no_tasks">Задач нет</string>
    <string name="add_tasks">Добавляйте списки задач и отслеживайте их выполнение</string>
    <string name="combine_floor_and_lounge">Объединить в этаж и подъезд</string>
    <string name="change_priority">Изменить приоритет</string>
    <string name="change_status">Изменить состояние</string>
    <string name="show_on_the_map">Показать на карте</string>
    <string name="set_signal">Установить сигнал</string>

    <string name="abbreviated_street">ул. </string>
    <string name="abbreviated_floor">эт</string>
    <string name="abbreviated_apartment">кв</string>
    <string name="abbreviated_entrance">под</string>

    <string name="add_house_manager">Добавить главного по дому</string>
    <string name="add_phone">Добавить телефон</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="add_label">Добавить метку</string>
    <string name="text_create">Создать</string>
    <string name="text_delete">Удалить</string>

    <string name="login_fail">Логин или пароль введены неверно</string>
    <string name="fields_check">Проверьте поля и исправьте ошибки</string>
    <string name="incorrect_mail">Неверный формат почты</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="passwords_match">Пароли совпадают</string>

</resources>