<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.SignInActivity">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_drawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="15dp"
        android:paddingStart="20dp"/>

    <TextView
        android:layout_marginHorizontal="15dp"
        android:id="@+id/accountLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="30dp"/>

    <TextView
        android:id="@+id/ifUHave"
        android:layout_width="290dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="wrap_content"
        android:text="@string/do_you_have_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/accountLogin"
        app:layout_constraintStart_toStartOf="parent"

        android:paddingTop="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/clear"
        app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"

        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ifUHave"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusTopStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRaduisInput"
        app:boxCornerRadiusBottomStart="@dimen/cornerRaduisInput"
        app:boxCornerRadiusTopEnd="@dimen/cornerRaduisInput"
        app:endIconMode="password_toggle"

        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/sub_check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:buttonTint="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_remember_password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/sub_check1"
        app:layout_constraintStart_toEndOf="@+id/sub_check1"
        app:layout_constraintTop_toTopOf="@+id/sub_check1" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@id/rememberPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        style="@style/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="13dp"
        android:backgroundTint="@color/main_color"
        android:text="@string/sign_in"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
        android:gravity="center">

        <TextView
            android:layout_marginRight="@dimen/marginTopForInputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_have_account"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/signUpTextView"
            android:textColor="@color/main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>